force-app/main/default/objects/RD_ControlPlanTranslation__c/RD_ControlPlanTranslation__c.object-meta.xml
<CustomObject>
    <label>RD ControlPlanTranslation</label>
    <nameField>
        <label>RD ControlPlanTranslation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ControlPlanTranslation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>