force-app/main/default/objects/RD_ControlPlanTranslation__c/fields/Num5__c.field-meta.xml
<CustomField>
    <fullName>Num5__c</fullName>
    <label>Num5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>