force-app/main/default/objects/RD_ControlPlanTranslation__c/fields/Num6__c.field-meta.xml
<CustomField>
    <fullName>Num6__c</fullName>
    <label>Num6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>