force-app/main/default/objects/RD_ControlPlanTranslation__c/fields/NumOpp6__c.field-meta.xml
<CustomField>
    <fullName>NumOpp6__c</fullName>
    <label>NumOpp6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>