force-app/main/default/objects/RD_ControlPlanTranslation__c/fields/Text7__c.field-meta.xml
<CustomField>
    <fullName>Text7__c</fullName>
    <label>Text7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>