force-app/main/default/objects/RD_ControlPlanTranslation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Test_OPNO__c</columns>
    <columns>NAME</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Text4__c</columns>
    <columns>Text5__c</columns>
    <columns>Text6__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>